--- a/public/css/login.css
+++ b/public/css/login.css
@@ -9,7 +9,7 @@ body {
 .login-header {
     text-align: center;
     margin-bottom: 20px;
-    background-color: #007bff;
+    background-color: #0d6efd;
     color: #fff;
     padding: 10px;
     border-radius: 10px;
